Add rspec test for request and test with  Survey API

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     links:
       - db
     volumes:
-      - .:/app
+      - .:/app:delegated
       - bundle:/usr/local/bundle
     ports:
       - 3000:3000
