--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue-composable/axios": "^1.0.0-beta.12",
+    "autoprefixer": "9",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "postcss": "8",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
